# WERKHub

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SETUP.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml  publish.yml
desktop/: .gitignore  README.md  deno.json  design-system.json  index.html  main.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
desktop/backend/: .gitignore  werkhub-backend.spec  werkhub_backend.py
desktop/bridge/: sidecar.ts
desktop/docs/: design-system.html
desktop/scripts/: gen-tokens.mjs
desktop/src/: App.tsx  main.tsx  shadcn-preset.css  tokens.css
docs/: ACCEPTANCE_MATRIX.md  DESIGN.md  bench.md  cli.md  concepts.md  dashboard.md  getting-started.md  index.md  onboarding.md  registry.md  security.md
docs/adr/: ADR-001-two-policy-models.md  ADR-002-store-bridge.md  ADR-003-werk-werkhub-boundary.md  ADR-004-string-trust-tiers.md  ADR-005-tier1-allowlist-gate.md  ADR-006-cross-harness-standard.md
docs/assets/: .gitkeep
docs/skills-library/: README.md
docs/stylesheets/: werkhub.css
examples/: echo_server.py  truth_server.py
scripts/: check_release_hygiene.py  check_unicode_safety.py  fix_import_position.py
src/werktools/: __init__.py  __main__.py  catalog.py  classify.py  cli.py  envelope.py  ledger.py  policy.py  profile.py  redaction.py  server.py
tests/: cassette.py  conftest.py  fake_process.py  test_bench.py  test_canon.py  test_capability_catalog.py  test_capability_select.py  test_catalog.py  test_cc_cassette.py  test_cc_conftest.py  test_cc_invariants.py  test_cc_store_bridge.py  test_check_release_hygiene.py  test_classify.py  test_envelope.py  test_export_rules.py  test_extras_matrix.py  test_hub_allowlist.py  test_hub_approvals.py  test_hub_approvals_server.py  test_hub_cli.py  test_hub_contracts.py  test_hub_dashboard.py  test_hub_diagnose.py  test_hub_discovery.py  test_hub_ledger.py  test_hub_lifecycle.py  test_hub_onboarding.py  test_hub_policy.py  test_hub_pool.py  test_hub_reaper.py  test_hub_registry.py  test_hub_relay.py  test_hub_render.py  test_hub_runtime_row.py  test_hub_runtimes.py  test_hub_server.py  test_hub_status.py  test_hub_workers.py  test_hub_workers_server.py  (+22 more)
tests/cassettes/: workers_policy.json
(+91 files in other folders)
